Lab 3 Kubernetes files/msa/18-node-api-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-canary
  labels:
    app: node-api-canary
spec:
  type: ClusterIP
  selector:
    app: node-api-canary
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
